# Python-SHAD

./: README.md  requirements.txt  vm.py
01.1.PythonTools/tasks/hello_world/: hello_world.py
01.2.BasicTypes/tasks/bin_basic/: bin_basic.py
01.2.BasicTypes/tasks/filter_list_by_list/: filter_list_by_list.py
01.2.BasicTypes/tasks/fizz_buzz/: fizz_buzz.py
01.2.BasicTypes/tasks/iterate_me/: iterate_me.py
02.1.DataStructures/lecture/: DataStructures.ipynb
03.1.FunctionsStringsIO/review/: FunctionsStringsIO.Solutions.ipynb
05.1.Classes/lecture/: Classes.ipynb
05.2.Datetime/lecture/: Datetime.ipynb
06.1.ModulesPackagesImport/lecture/: ModulesPackagesImport.ipynb
06.1.ModulesPackagesImport/review/: ModulesPackagesImport.Solutions.ipynb
06.1.ModulesPackagesImport/tasks/steganography_tool/: pyproject.toml  test_cli.py  test_module.py  test_public.py
06.1.ModulesPackagesImport/tasks/steganography_tool/src/steganography_tool/: cli.py  utils.py
06.1.ModulesPackagesImport/tasks/steganography_tool/src/steganography_tool.egg-info/: PKG-INFO  SOURCES.txt
06.1.ModulesPackagesImport/tasks/steganography_tool/src/steganography_tool/steganography_tool.egg-info/: SOURCES.txt  entry_points.txt
06.2.ExceptionsContextManagers/lecture/: ExceptionsContextManagers.ipynb
06.2.ExceptionsContextManagers/review/: ExceptionsContextManagers.Solutions.ipynb
07.1.IteratorsGenerators/lecture/: IteratorsGenerators.ipynb
07.2.Typing_1/lecture/: Typing_1.ipynb
08.1.Typing_2/lecture/: Typing_2.ipynb
08.1.Typing_2/review/: Typing_2.Solutions.ipynb
(+94 files in other folders)
